Add Test targets for iOS, macOS, tvOS.

--- a/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-watchOS.xcscheme
+++ b/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-watchOS.xcscheme
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "274831C4537CB2244DE06D365900AE7F"
-               BuildableName = "Pods_EPUBKit.framework"
-               BlueprintName = "Pods-EPUBKit"
-               ReferencedContainer = "container:Pods/Pods.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "41689DD41EE997D1004D6003"
-               BuildableName = "EPUBKit.framework"
-               BlueprintName = "EPUBKit"
+               BlueprintIdentifier = "4134175B20E7C2D8003D101D"
+               BuildableName = "EPUBKit_watchOS.framework"
+               BlueprintName = "EPUBKit-watchOS"
                ReferencedContainer = "container:EPUBKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -43,15 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "41689DD41EE997D1004D6003"
-            BuildableName = "EPUBKit.framework"
-            BlueprintName = "EPUBKit"
-            ReferencedContainer = "container:EPUBKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -68,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "41689DD41EE997D1004D6003"
-            BuildableName = "EPUBKit.framework"
-            BlueprintName = "EPUBKit"
+            BlueprintIdentifier = "4134175B20E7C2D8003D101D"
+            BuildableName = "EPUBKit_watchOS.framework"
+            BlueprintName = "EPUBKit-watchOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -86,9 +63,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "41689DD41EE997D1004D6003"
-            BuildableName = "EPUBKit.framework"
-            BlueprintName = "EPUBKit"
+            BlueprintIdentifier = "4134175B20E7C2D8003D101D"
+            BuildableName = "EPUBKit_watchOS.framework"
+            BlueprintName = "EPUBKit-watchOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
