--- a/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-macOS.xcscheme
+++ b/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-macOS.xcscheme
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -33,8 +34,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4134184D20E82140003D101D"
-               BuildableName = "EPUBKit macOS Tests.xctest"
-               BlueprintName = "EPUBKit macOS Tests"
+               BuildableName = "EPUBKit-macOS Tests.xctest"
+               BlueprintName = "EPUBKit-macOS Tests"
                ReferencedContainer = "container:EPUBKit.xcodeproj">
             </BuildableReference>
          </TestableReference>
