--- a/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-iOS.xcscheme
+++ b/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4134177620E7C5DB003D101D"
-               BuildableName = "EPUBKit_iOS.framework"
+               BuildableName = "EPUBKit.framework"
                BlueprintName = "EPUBKit-iOS"
                ReferencedContainer = "container:EPUBKit.xcodeproj">
             </BuildableReference>
@@ -44,7 +44,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4134177620E7C5DB003D101D"
-            BuildableName = "EPUBKit_iOS.framework"
+            BuildableName = "EPUBKit.framework"
             BlueprintName = "EPUBKit-iOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4134177620E7C5DB003D101D"
-            BuildableName = "EPUBKit_iOS.framework"
+            BuildableName = "EPUBKit.framework"
             BlueprintName = "EPUBKit-iOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
@@ -84,7 +84,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4134177620E7C5DB003D101D"
-            BuildableName = "EPUBKit_iOS.framework"
+            BuildableName = "EPUBKit.framework"
             BlueprintName = "EPUBKit-iOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
