--- a/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-watchOS.xcscheme
+++ b/EPUBKit.xcodeproj/xcshareddata/xcschemes/EPUBKit-watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4134175B20E7C2D8003D101D"
-               BuildableName = "EPUBKit_watchOS.framework"
+               BuildableName = "EPUBKit.framework"
                BlueprintName = "EPUBKit-watchOS"
                ReferencedContainer = "container:EPUBKit.xcodeproj">
             </BuildableReference>
@@ -47,7 +47,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4134175B20E7C2D8003D101D"
-            BuildableName = "EPUBKit_watchOS.framework"
+            BuildableName = "EPUBKit.framework"
             BlueprintName = "EPUBKit-watchOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4134175B20E7C2D8003D101D"
-            BuildableName = "EPUBKit_watchOS.framework"
+            BuildableName = "EPUBKit.framework"
             BlueprintName = "EPUBKit-watchOS"
             ReferencedContainer = "container:EPUBKit.xcodeproj">
          </BuildableReference>
