--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: swift 
 osx_image: xcode7
 script:
-  - xcodebuild -scheme EPUBKit-iOS -project EPUBKit.xcodeproj -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6S,OS=9.1' build test
+  - xcodebuild -scheme EPUBKit-iOS -project EPUBKit.xcodeproj -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 5,OS=10.0' build test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
