--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      run: swift test -v
+      run: swift test --no-parallel -v
